<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fauricio.proyecto_1_moviles.Vista.admin.agregar_choferActivity">

    <Space
        android:layout_width="1dp"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/et_nombre"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_placa"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="@string/txt_placa"/>

    <EditText
        android:id="@+id/et_rating"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:inputType="number"
        android:hint="@string/txt_rating"/>

    <EditText
        android:id="@+id/et_empresa"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:inputType="number"
        android:hint="@string/et_empresa"/>

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="@string/et_correo"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="@string/et_username"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="@string/et_password"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btn_add_chofer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:hint="@string/txt_agregar"/>
</LinearLayout>
