<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fauricio.proyecto_1_moviles.Vista.admin.agregar_ruta">

    <Space
        android:layout_width="1dp"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/et_nombre_rt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/et_nombre"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_inicio_rt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="@string/txt_inicio"/>

    <EditText
        android:id="@+id/et_final_rt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:inputType="text"
        android:hint="@string/txt_final"/>

    <EditText
        android:id="@+id/et_costo_rt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:inputType="number"
        android:hint="@string/txt_costo"/>

    <EditText
        android:id="@+id/et_latitud_rt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="Latitud"/>

    <EditText
        android:id="@+id/et_longitud_rt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="Longitud"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btn_add_ruta"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:hint="@string/txt_agregar"
        android:onClick="agregar_ruta"/>

</LinearLayout>
