<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fauricio.proyecto_1_moviles.Vista.admin.detalle_ruta">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_ruta"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/et_nombre"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_inicio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:hint="@string/txt_inicio"/>

        <EditText
            android:id="@+id/et_final"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:inputType="number"
            android:hint="@string/txt_final"/>

        <EditText
            android:id="@+id/et_costo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:inputType="number"
            android:hint="@string/txt_costo"/>

        <EditText
            android:id="@+id/et_empresa"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:hint="@string/et_empresa"/>
    </LinearLayout>

</LinearLayout>
