<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".Vista.cliente.detalle_ruta_user">

    <TextView
        android:id="@+id/txt_nombre_rt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/et_nombre"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txt_inicio_rt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="@string/txt_inicio"/>

    <TextView
        android:id="@+id/txt_final_rt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:inputType="text"
        android:hint="@string/txt_final"/>

    <TextView
        android:id="@+id/txt_costo_rt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:inputType="number"
        android:hint="@string/txt_costo"/>

    <TextView
        android:id="@+id/txt_latitud_rt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="Latitud"/>

    <TextView
        android:id="@+id/txt_longitud_rt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="Longitud"/>

</LinearLayout>