<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fauricio.proyecto_1_moviles.Vista.RecuperarPassword">

    <Space
        android:layout_width="1dp"
        android:layout_height="50dp" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_gravity="center_horizontal"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/missing"/>

    <TextView
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/colorNegro"
        android:text="@string/txt_pregunta"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="@string/et_username"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="@string/et_password"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/bt_ingresar"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:text="@string/btn_login"
        android:onClick="login"/>

</LinearLayout>
