<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.example.fauricio.proyecto_1_moviles.Vista.Registro">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_gravity="center_horizontal"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/logo"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/et_nombre_reg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="@string/et_nombre"/>

    <EditText
        android:id="@+id/et_apellido_reg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="Apellido"/>

    <EditText
        android:id="@+id/et_correo_reg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="@string/et_correo"/>

    <EditText
        android:id="@+id/et_password_reg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/et_password"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/bt_ingresar"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:text="@string/btn_login"
        android:onClick="registro"/>


</LinearLayout>
