<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context="com.example.fauricio.proyecto_1_moviles.Vista.admin.agregar_empresa">

    <Space
        android:layout_width="1dp"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/et_nombre_empresa"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:hint="@string/et_nombre"/>

    <EditText
        android:id="@+id/et_detalle_empresa"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/txt_descp"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btn_add_empresa"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:hint="@string/txt_agregar"/>



</LinearLayout>
